BrainMiner now uses rocker/tidyverse base image

--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -1,4 +1,4 @@
-FROM rocker/tidyverse
+FROM python:2.7
 
 MAINTAINER Ralph Brecheisen <ralph.brecheisen@gmail.com>
 
@@ -6,16 +6,8 @@ COPY brainminer /var/www/brainminer/brainminer
 COPY run.sh /var/www/brainminer/run.sh
 COPY requirements.txt /tmp/requirements.txt
 
-RUN apt-get update \
-    && apt-get install -yy \
-        vim \
-        curl \
-        python2.7 \
-        python2.7-dev \
-        python-pip \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN pip install --upgrade pip \
+RUN apt-get update && apt-get install -yy vim curl \
+    && pip install --upgrade pip \
     && pip install -r /tmp/requirements.txt \
     && rm /tmp/requirements.txt \
     && echo
